BinaryOptionsToolsUni/out/swift/binary_options_tools_uniFFI.h

uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_clear_closed_deals(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_create_raw_handler(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles_advanced(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_closed_deals(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_opened_deals(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_history(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_is_demo(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_payout(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_reconnect(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_result(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_result_with_timeout(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_sell(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_server_time(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_shutdown(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_subscribe(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_trade(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_pocketoption_unsubscribe(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_and_wait(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_binary(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_text(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_rawhandler_wait_next(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_subscriptionstream_next(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_method_validator_check(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_all(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_any(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_contains(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_ends_with(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_ne(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_new(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_regex(void
    
);
uint16_t uniffi_binary_options_tools_uni_checksum_constructor_validator_starts_with(void
    
);