BinaryOptionsToolsUni/out/python/binary_options_tools_uni.py

_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_clear_closed_deals.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_create_raw_handler.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_create_raw_handler.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles_advanced.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_candles_advanced.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_closed_deals.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_closed_deals.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_opened_deals.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_get_opened_deals.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_history.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_history.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_is_demo.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_is_demo.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_payout.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_payout.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_reconnect.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_reconnect.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_result.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_result.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_result_with_timeout.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_result_with_timeout.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_sell.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_sell.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_server_time.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_server_time.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_shutdown.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_subscribe.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_subscribe.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_trade.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_trade.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_unsubscribe.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_pocketoption_unsubscribe.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_and_wait.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_and_wait.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_binary.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_binary.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_text.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_send_text.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_wait_next.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_rawhandler_wait_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_subscriptionstream_next.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_subscriptionstream_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_all.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_all.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_any.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_any.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_contains.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_contains.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_ends_with.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_ends_with.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_ne.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_ne.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_new.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_regex.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_regex.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_starts_with.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_constructor_validator_starts_with.restype = ctypes.c_uint16
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_validator_check.argtypes = (
)
_UniffiLib.uniffi_binary_options_tools_uni_checksum_method_validator_check.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# RustFuturePoll values
_UNIFFI_RUST_FUTURE_POLL_READY = 0
_UNIFFI_RUST_FUTURE_POLL_WAKE = 1

# Stores futures for _uniffi_continuation_callback
_UniffiContinuationHandleMap = _UniffiHandleMap()

_UNIFFI_GLOBAL_EVENT_LOOP = None

"""
Set the event loop to use for async functions

This is needed if some async functions run outside of the eventloop, for example:
    - A non-eventloop thread is spawned, maybe from `EventLoop.run_in_executor` or maybe from the
      Rust code spawning its own thread.
    - The Rust code calls an async callback method from a sync callback function, using something
      like `pollster` to block on the async call.

In this case, we need an event loop to run the Python async function, but there's no eventloop set
for the thread.  Use `uniffi_set_event_loop` to force an eventloop to be used in this case.
"""
def uniffi_set_event_loop(eventloop: asyncio.BaseEventLoop):
    global _UNIFFI_GLOBAL_EVENT_LOOP
    _UNIFFI_GLOBAL_EVENT_LOOP = eventloop

def _uniffi_get_event_loop():
    if _UNIFFI_GLOBAL_EVENT_LOOP is not None:
        return _UNIFFI_GLOBAL_EVENT_LOOP
    else:
        return asyncio.get_running_loop()

# Continuation callback for async functions
# lift the return value or error and resolve the future, causing the async function to resume.
@_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK
def _uniffi_continuation_callback(future_ptr, poll_code):
    (eventloop, future) = _UniffiContinuationHandleMap.remove(future_ptr)
    eventloop.call_soon_threadsafe(_uniffi_set_future_result, future, poll_code)

def _uniffi_set_future_result(future, poll_code):
    if not future.cancelled():
        future.set_result(poll_code)

async def _uniffi_rust_call_async(rust_future, ffi_poll, ffi_complete, ffi_free, lift_func, error_ffi_converter):
    try:
        eventloop = _uniffi_get_event_loop()

        # Loop and poll until we see a _UNIFFI_RUST_FUTURE_POLL_READY value
        while True:
            future = eventloop.create_future()
            ffi_poll(
                rust_future,
                _uniffi_continuation_callback,
                _UniffiContinuationHandleMap.insert((eventloop, future)),
            )
            poll_code = await future
            if poll_code == _UNIFFI_RUST_FUTURE_POLL_READY:
                break

        return lift_func(
            _uniffi_rust_call_with_error(error_ffi_converter, ffi_complete, rust_future)
        )
    finally:
        ffi_free(rust_future)

# Public interface members begin here.


class _UniffiFfiConverterInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i32"
    VALUE_MIN = -2**31
    VALUE_MAX = 2**31

    @staticmethod
    def read(buf):
        return buf.read_i32()

    @staticmethod
    def write(value, buf):
        buf.write_i32(value)

class _UniffiFfiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiFfiConverterBoolean:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)

class _UniffiFfiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)

@dataclass
class CandleLength:
    """
    Represents the duration of a candle.

    This struct is a simple wrapper around a `u32` that represents the candle duration in seconds.
    It is used in the `Asset` struct to specify the allowed candle lengths for an asset.

    # Examples

    ## Python
    ```python
    from binaryoptionstoolsuni import CandleLength

    five_second_candle = CandleLength(time=5)
    ```
"""
    def __init__(self, *, time:int):
        self.time = time
        
        

    
    def __str__(self):
        return "CandleLength(time={})".format(self.time)
    def __eq__(self, other):
        if self.time != other.time:
            return False
        return True

class _UniffiFfiConverterTypeCandleLength(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return CandleLength(
            time=_UniffiFfiConverterUInt32.read(buf),
        )
